<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menuitemurl"
        android:orderInCategory="1"
        android:title="@string/menuitemurl"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuitemjoke"
        android:orderInCategory="2"
        android:title="@string/menuitemjoke"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuitemgame"
        android:orderInCategory="3"
        android:title="@string/menuitemgame"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuitemtest"
        android:orderInCategory="4"
        android:title="@string/menuitemtest"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuitemclock"
        android:orderInCategory="5"
        android:title="@string/menuitemclock"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuitemtimer"
        android:orderInCategory="6"
        android:title="@string/menuitemtimer"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuitemcontact"
        android:orderInCategory="7"
        android:title="@string/menuitemcontact"
        app:showAsAction="never" />

</menu>