<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/recycle_card_view"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true"

        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recycler_card_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/firstNameContact"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                android:textStyle="bold"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="gone">

            <TextView
                android:id="@+id/recycler_card_phoneNumber"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:text="@string/phoneNumberContact"
                android:textColor="@color/colorBlack"
                android:textSize="25dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/recycler_card_emailAddress"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:text="@string/emailAddressContact"
                android:textColor="@color/colorBlack"
                android:textSize="25dp"
                android:textStyle="bold"

                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>